--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <div class="brand-logo">
                     <div class="logo">
-                        <img src="./img/logo-nav.png" alt="pages-logo">
+                        <img src="./images/IMAGE.png" alt="pages-logo">
                     </div>
                     <div class="logo-icons">
                         <div class="a">
