--- a/index.html
+++ b/index.html
@@ -1,85 +1,156 @@
+
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="main.css">
+    <title>Figma | Pages</title>
+    <link rel="stylesheet" href="style.css">
+
+    <!-- BoxIcons Link -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
+
 <body>
-    
-</body>
-</html>
+    <header>
+        <div class="nav-bar">
+            <div class="container">
+                <nav>
+                    <div class="brand-logo">
+                        <div class="logo">
+                            <img src="./img/logo-nav.png" alt="pages-logo">
+                        </div>
+                        <div class="logo-icons">
+                            <div class="a">
+                                <i class='bx bxl-facebook'></i>
+                                <i class='bx bxl-twitter'></i>
+                                <i class='bx bxl-linkedin'></i>
+                            </div>
+                        </div>
+                    </div>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Pages</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#" id="nav-icon"><i class='bx bxs-cart'></i></a></li>
+                        <li><a href="#" id="btn-nav">Order Today</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
 
-<header>
-    <div class="nav-bar">
         <div class="container">
-            <nav>
-                <div class="brand-logo">
-                    <div class="logo">
-                        <img src="./images/IMAGE.png" alt="pages-logo">
+            <div class="header-center">
+                <div class="left-page">
+                    <div class="flex-line">
+                        <div class="line"></div>
+                        <span>Welcome To Pages</span>
                     </div>
-                    <div class="logo-icons">
-                        <div class="a">
-                            <i class='bx bxl-facebook'></i>
-                            <i class='bx bxl-twitter'></i>
-                            <i class='bx bxl-linkedin'></i>
+                    <h1>Your Books From The Best Writer.</h1>
+                    <p>We believe that reading books are essential to a healthy culture.</p>
+                    <p>They're where authors can connect with readers.</p>
+                    <div class="btn-header">
+                        <a href="#" class="header-btn_1">Order Today</a>
+                        <a href="#" class="header-btn_2">Read Free Demo</a>
+                    </div>
+                    <div class="grid-item">
+                        <div class="row">
+                            <div class="flex-round">
+                                <div class="round"></div>
+                                <h3> Pages:</h3>
+                            </div>
+                            <p>250pages</p>
+                        </div>
+                        <div class="row">
+                            <div class="flex-round">
+                                <div class="round"></div>
+                                <h3>Length:</h3>
+                            </div>
+                            <p>10 Hours</p>
+                        </div>
+                        <div class="row">
+                            <div class="flex-round">
+                                <div class="round"></div>
+                                <h3>Rating:</h3>
+                            </div>
+                            <p>4.5/5 (305 ratings)</p>
                         </div>
                     </div>
                 </div>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Pages</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#" id="nav-icon"><i class='bx bxs-cart'></i></a></li>
-                    <li><a href="#" id="btn-nav">Order Today</a></li>
-                </ul>
-            </nav>
+                <div class="right-page">
+                    <img src="./img/header-right.png" alt="book_img">
+                </div>
+            </div>
         </div>
+    </header>
+
+<div class="container">
+        <main>
+            <div class="bg-white-section">
+                <h1>The Author's Book</h1>
+                <section class="first-section">
+                    <div class="left-book">
+                        <div class="book-img">
+                            <img src="./img/left-book.png" alt="book_img">
+                        </div>
+                        <div class="left-text">
+                            <h3>Atomic One's</h3>
+                            <span>$ 13.84 USD</span>
+                            <p>As the book contains theoretical content as well as solved questions.</p>
+                            <div class="flex-item">
+                                <div class="round-flex"></div>
+                                <p id="round-text">Printed Book</p>
+                            </div>
+                            <div class="bottom-btn">
+                                <a href="#">Order Now</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right-book">
+                        <div class="book-img">
+                            <img src="./img/right-img.png" alt="book_img">
+                        </div>
+                        <div class="left-text">
+                            <h3>Atomic One's</h3>
+                            <span>$ 13.84 USD</span>
+                            <p>As the book contains theoretical content as well as solved questions.</p>
+                            <div class="flex-item">
+                                <div class="round-flex"></div>
+                                <p id="round-text">Printed Book</p>
+                            </div>
+                            <div class="bottom-btn">
+                                <a href="#">Order Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </main>
     </div>
 
-    <div class="container">
-        <div class="header-center">
-            <div class="left-page">
-                <div class="flex-line">
-                    <div class="line"></div>
-                    <span>Welcome To Pages</span>
+    <div class="about-author">
+        <div class="container">
+            <section class="second-section">
+                <div class="left-photo">
+                    <img src="./img/boboy-photo.png" alt="about-author-photo">
                 </div>
-                <h1>Your Books From The Best Writer.</h1>
-                <p>We believe that reading books are essential to a healthy culture.</p>
-                <p>They're where authors can connect with readers.</p>
-                <div class="btn-header">
-                    <a href="#" class="header-btn_1">Order Today</a>
-                    <a href="#" class="header-btn_2">Read Free Demo</a>
+                <div class="right-about">
+                    <h1 class="about-text">About the Author</h1>
+                    <div class="line line2"></div>
+                    <p>We believe that bookstores are essential to a healthy culture. They're where authors can connect
+                        with readers, where we discover new writers, where children get hooked on the thrill of reading
+                        that can last a lifetime.</p>
+                    <img class="numbers-img" src="./img/grid-numbers.svg" alt="">
+                    <img class="QR" src="./img/QRcode.png" alt="QR-code">
                 </div>
-                <div class="grid-item">
-                    <div class="row">
-                        <div class="flex-round">
-                            <div class="round"></div>
-                            <h3> Pages:</h3>
-                        </div>
-                        <p>250pages</p>
-                    </div>
-                    <div class="row">
-                        <div class="flex-round">
-                            <div class="round"></div>
-                            <h3>Length:</h3>
-                        </div>
-                        <p>10 Hours</p>
-                    </div>
-                    <div class="row">
-                        <div class="flex-round">
-                            <div class="round"></div>
-                            <h3>Rating:</h3>
-                        </div>
-                        <p>4.5/5 (305 ratings)</p>
-                    </div>
-                </div>
-            </div>
-            <div class="right-page">
-                <img src="./img/header-right.png" alt="book_img">
-            </div>
+            </section>
         </div>
     </div>
-</header>
+</body>
+
+</html>
