--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figma | Pages</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
 
     <!-- BoxIcons Link -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -19,7 +19,7 @@
                 <nav>
                     <div class="brand-logo">
                         <div class="logo">
-                            <img src="./img/logo-nav.png" alt="pages-logo">
+                            <img src="/images/logo.png" alt="pages-logo">
                         </div>
                         <div class="logo-icons">
                             <div class="a">
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="right-page">
-                    <img src="./img/header-right.png" alt="book_img">
+                    <img src="/images/IMAGE.png" alt="book_img">
                 </div>
             </div>
         </div>
@@ -93,7 +93,7 @@
                 <section class="first-section">
                     <div class="left-book">
                         <div class="book-img">
-                            <img src="./img/left-book.png" alt="book_img">
+                            <img src="/images/atomicbook.png" alt="book_img">
                         </div>
                         <div class="left-text">
                             <h3>Atomic One's</h3>
@@ -110,7 +110,7 @@
                     </div>
                     <div class="right-book">
                         <div class="book-img">
-                            <img src="./img/right-img.png" alt="book_img">
+                            <img src="/images/mainbooksmall.png" alt="small_img">
                         </div>
                         <div class="left-text">
                             <h3>Atomic One's</h3>
@@ -130,11 +130,15 @@
         </main>
     </div>
 
+
+
+
+
     <div class="about-author">
         <div class="container">
             <section class="second-section">
                 <div class="left-photo">
-                    <img src="./img/boboy-photo.png" alt="about-author-photo">
+                    <img src="/images/amaki.png" alt="about-author-photo">
                 </div>
                 <div class="right-about">
                     <h1 class="about-text">About the Author</h1>
@@ -142,8 +146,8 @@
                     <p>We believe that bookstores are essential to a healthy culture. They're where authors can connect
                         with readers, where we discover new writers, where children get hooked on the thrill of reading
                         that can last a lifetime.</p>
-                    <img class="numbers-img" src="./img/grid-numbers.svg" alt="">
-                    <img class="QR" src="./img/QRcode.png" alt="QR-code">
+                    <!-- <img class="numbers-img" src="/images/IMAGE.png" alt=""> -->
+                    <img class="QR" src="/images/qrcode.png" alt="QR-code">
                 </div>
             </section>
         </div>
