--- a/index2.html
+++ b/index2.html
@@ -54,18 +54,21 @@
 
       <div class="mainxon">
         <div class="right">
-          <img src="img/2.svg" alt="" />
+          <img src="images2/2.svg" alt="" />
 
           <div class="phjon">
-            <img src="img/3.svg" alt="" />
-            <img class="ph1" src="img/Mask Group.svg" alt="" />
+            <img
+              src="images2/3.svg"
+              alt=""
+            />
+            <img class="ph1" src="images2/Mask Group.svg" alt="" />
           </div>
         </div>
 
         <div class="left">
           <div class="container">
             <img
-              src="img/boy.png"
+              src="images2/boy.png"
               alt="Avatar"
               class="image"
               style="width: 100%"
